POR-404 Fix alignment

--- a/assets/styles/pages/news.scss
+++ b/assets/styles/pages/news.scss
@@ -1,3 +1,6 @@
+.story-page section {
+    width: 75%;
+}
 .story-page section h2 {
     width: 100%;
 }
